[metadata]
name = rcu
version = 2021.001

[options]
# zip_safe = False
# include_package_data = True
packages =
    rcu
    rcu.model
    rcu.model.pens
    rcu.controllers
    rcu.panes
    rcu.panes.deviceinfo
    rcu.panes.deviceinfo.backup
install_requires =
    paramiko >= 2.7.1
    pdfrw >= 0.4
    Pillow >= 8.0.1

[options.entry_points]
console_scripts =
    rcu = rcu.main:main
