[metadata]
name = rcu
version = 2021.001

[options]
packages =
    rcu
    rcu.controllers
    rcu.model
    rcu.model.pens
    rcu.controllers
    rcu.panes
    rcu.panes.about
    rcu.panes.deviceinfo
    rcu.panes.deviceinfo.backup
    rcu.panes.display
    rcu.panes.incompatible
    rcu.panes.notebooks
    rcu.panes.software
    rcu.panes.splash
    rcu.panes.templates
install_requires =
    paramiko >= 2.7.1
    pdfrw >= 0.4
    Pillow >= 8.0.1
zip_safe = False

[options.entry_points]
console_scripts =
    rcu = rcu.main:main

[options.package_data]
rcu =
    version.txt
    licenses/*
    views/*
rcu.model.pens =
    pencil_textures_linear/*
    pencil_textures_log/*
    paintbrush_textures_log/*
* = *.ui, icons/*
